[package]
name = "game_clock"
version = "1.1.1"
description = "Provides a clock for game (engines) that is simple to use and efficient."
keywords = ["game", "time"]
documentation = "https://docs.rs/game_clock"
categories = ["game-engines"]
authors = ["Joël Lupien (Jojolepro) <jojolepro@jojolepro.com>"]
edition = "2018"
license = "Apache-2.0"
exclude = ["doc"]
repository = "https://git.jojolepro.com/game_clock/"

[dependencies]
